--- a/pandas-dataframe.ipynb
+++ b/pandas-dataframe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,17 +12,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "miaserie = pd.Series([4, 5, 6.5, 7],index=['primo','secondo','terzo','quarto'])\n",
+    "miaserie\n",
+    "print(miaserie['secondo'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "d = {'one': pd.Series([1., 2., 3.], index=['a', 'b', 'c']),\n",
+    "d = {'one': pd.Series([1., 2., 3.], index=['a', 'b', 'c']), #serie: strutt dati omogenea\n",
     "   ....:      'two': pd.Series([1., 2., 3., 4.], index=['a', 'b', 'c', 'd'])}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "a    2.0\n",
+       "b    4.0\n",
+       "c    6.0\n",
+       "d    NaN\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d['two']+d['one']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "a    3.0\n",
+       "b    3.0\n",
+       "c    NaN\n",
+       "d    NaN\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ser1 = pd.Series([1, 2, 3], index=['b', 'a', 'c'])\n",
+    "ser2 = pd.Series([1, 2, 3], index=['a', 'b', 'd'])\n",
+    "ser1 + ser2 #somma gli indici, dove index non presente mette NaN (nullo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +161,7 @@
        "d  NaN  4.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +185,7 @@
        "Name: one, dtype: float64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +205,7 @@
        "1.0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +227,7 @@
        "Name: b, dtype: float64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +249,7 @@
        "Name: c, dtype: float64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +260,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         0         1         2         3         4         5         6   \\\n",
+      "0  0.646127  0.548970  0.268951  0.808461  0.016683  0.014053  0.052033   \n",
+      "1  0.409455  0.976651  0.824196  0.951940  0.895509  0.735764  0.603634   \n",
+      "2  0.910313  0.112414  0.729188  0.193512  0.110309  0.223972  0.841004   \n",
+      "3  0.644635  0.855137  0.407439  0.876810  0.785062  0.674765  0.693297   \n",
+      "4  0.529667  0.896260  0.513628  0.526910  0.702960  0.882114  0.067643   \n",
+      "\n",
+      "         7         8         9   ...        70        71        72        73  \\\n",
+      "0  0.084838  0.494624  0.825371  ...  0.478158  0.470431  0.883751  0.342571   \n",
+      "1  0.543369  0.705625  0.209135  ...  0.605644  0.885584  0.338813  0.123891   \n",
+      "2  0.644774  0.837998  0.808713  ...  0.298656  0.959898  0.199228  0.636856   \n",
+      "3  0.657330  0.332971  0.904639  ...  0.689706  0.342264  0.727234  0.110487   \n",
+      "4  0.480229  0.072964  0.900047  ...  0.692290  0.426240  0.896656  0.598892   \n",
+      "\n",
+      "         74        75        76        77        78        79  \n",
+      "0  0.294011  0.666198  0.559797  0.735224  0.949951  0.962256  \n",
+      "1  0.429194  0.792545  0.212184  0.252959  0.361938  0.225877  \n",
+      "2  0.537436  0.917009  0.332496  0.159406  0.409822  0.075421  \n",
+      "3  0.490476  0.440006  0.037842  0.558869  0.925828  0.044500  \n",
+      "4  0.833821  0.462954  0.954584  0.686412  0.455401  0.743764  \n",
+      "\n",
+      "[5 rows x 80 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df2 = pd.DataFrame(np.random.rand(5,80))\n",
+    "print(df2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    0.268951\n",
+       "1    0.824196\n",
+       "2    0.729188\n",
+       "3    0.407439\n",
+       "4    0.513628\n",
+       "Name: 2, dtype: float64"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>one</th>\n",
+       "      <th>two</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   one  two\n",
+       "b  2.0  2.0"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[(df['one']>1) & (df['two']<3)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +427,7 @@
        "c  3.0  3.0"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +487,7 @@
        "c  3.0  3.0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +509,7 @@
        "Name: two, dtype: float64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +575,7 @@
        "two  1.0  2.0  3.0  4.0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +609,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
